tests/error/cant_override.gw
// [skip] but cannot override
class C {
  function void test() {}
}

class D extends C {
  function int test() {}
}
